# envoy-solar-reader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VERSIONING  config.yaml  config_example.yaml  core.py  dataretriever.py  envoy-to-mqtt.service  envoy_solar_reader.py  envoy_solar_reader.service  mqtt_service.py  pyproject.toml  run.sh
src/envoy_solar_reader/: __init__.py  core.py  dataretriever.py  envoy_solar_reader.py  models.py  mqtt_service.py
systemd/: envoy_solar_reader.service  run.sh
utils/: create_venv.sh  requirements.txt  run.sh
