[tool.poetry]
name = "envoy_solar_reader"
version = "0.1.0"
description = "Retrieve data from Enlighten Envoy Solar micro inverters connected through an Enlighten Enphase Envoy Gateway and post them to an MQTT topic"
authors = ["Maarten Joosten"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pyyaml = "^6.0"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
envoy_solar_reader = "envoy_solar_reader.core:run"
